--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Art Siel Experience</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;700&family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="Watermark%20youTube.png" />
   <style>
     body {
       margin: 0;
@@ -17,32 +18,36 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 2rem;
+      flex-wrap: wrap;
+      padding: 1rem 2rem;
+      gap: 1rem;
     }
     .logo-area {
       display: flex;
       align-items: center;
+      gap: 1rem;
     }
     .logo-area img {
-      width: 64px;
-      height: 64px;
-      margin-right: 1rem;
+      width: 60px;
+      height: 60px;
     }
     h1 {
-      font-size: 2.5rem;
+      font-size: 1.8rem;
       color: #f1f5f9;
       margin: 0;
     }
     h2 {
-      font-size: 1.5rem;
+      font-size: 1rem;
       color: #cbd5e1;
       font-family: 'Montserrat', sans-serif;
       font-weight: 400;
-      margin: 0.5rem 0 2rem;
+      margin: 0.2rem 0;
     }
     nav {
       display: flex;
-      gap: 1.5rem;
+      flex-wrap: wrap;
+      gap: 1.2rem;
+      font-size: 1rem;
     }
     nav a {
       color: #f1f5f9;
@@ -50,8 +55,8 @@
       font-weight: 500;
     }
     .container {
-      padding: 2rem;
-      max-width: 1000px;
+      padding: 1.5rem;
+      max-width: 950px;
       margin: auto;
     }
     .section-title {
@@ -76,22 +81,52 @@
     }
     .footer-logo {
       display: flex;
-      justify-content: flex-end;
+      justify-content: center;
       margin-top: 3rem;
     }
     .footer-logo img {
-      height: 60px;
+      height: 90px;
     }
     .social-links {
       display: flex;
-      gap: 1rem;
+      gap: 1.5rem;
       margin-top: 2rem;
       flex-wrap: wrap;
+      justify-content: center;
     }
     .social-links a {
       color: #cbd5e1;
       text-decoration: none;
       font-size: 1rem;
+      transition: color 0.3s ease;
+    }
+    .social-links a:hover {
+      color: #60a5fa;
+    }
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .logo-area img {
+        width: 50px;
+        height: 50px;
+      }
+      h1 {
+        font-size: 1.5rem;
+      }
+      h2 {
+        font-size: 0.95rem;
+      }
+      nav {
+        width: 100%;
+        justify-content: flex-start;
+        margin-top: 1rem;
+        gap: 1rem;
+      }
+      .footer-logo img {
+        height: 70px;
+      }
     }
   </style>
 </head>
@@ -149,9 +184,9 @@
     </section>
 
     <div class="social-links">
-      <a href="#">LinkedIn</a>
-      <a href="https://www.youtube.com/@ArtSiel-j8k">YouTube</a>
-      <a href="#">Facebook</a>
+      <a href="https://www.linkedin.com/in/art-siel" target="_blank">LinkedIn</a>
+      <a href="https://www.youtube.com/@ArtSiel-j8k" target="_blank">YouTube</a>
+      <a href="https://www.facebook.com/share/178zhLFfPP/" target="_blank">Facebook</a>
       <a href="#">Instagram</a>
       <a href="#">TikTok</a>
       <a href="#">Pinterest</a>
@@ -164,4 +199,3 @@
   </main>
 </body>
 </html>
-
